tests/purs/failing/2128-class.purs
-- @shouldFailWith ErrorParsingModule
module Main where

class Foo a where
  foo :: a -> !!!
